# devin-interview

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
src/devin_interview/: __init__.py  __main__.py
templates/: dashboard.html
tests/: test_smoke.py
