[project]
name = "devin-interview"
version = "0.1.0"
description = "Webhook endpoint that triggers a Devin session on ticket creation"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111,<1",
    "uvicorn>=0.30,<1",
    "httpx>=0.27,<1",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
